// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Pagination > accepts react-router-dom Link element 1`] = `
[
  <nav
    class="nhsuk-pagination"
    data-testid="pagination"
  >
    <ul
      class="nhsuk-list nhsuk-pagination__list"
    >
      <li
        class="nhsuk-pagination-item nhsuk-pagination-item--previous"
      >
        <a
          class="nhsuk-pagination__link nhsuk-pagination__link--prev"
          data-testid="pagination-link-previous"
          href="/#previous"
        >
          <span
            class="nhsuk-pagination__title"
          >
            Previous
          </span>
          <span
            class="nhsuk-u-visually-hidden"
          >
            :
          </span>
          <span
            class="nhsuk-pagination__page"
          >
            Page 1
          </span>
          <svg
            aria-hidden="true"
            class="nhsuk-icon nhsuk-icon__arrow-left"
            height="34"
            viewBox="0 0 24 24"
            width="34"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M4.1 12.3l2.7 3c.2.2.5.2.7 0 .1-.1.1-.2.1-.3v-2h11c.6 0 1-.4 1-1s-.4-1-1-1h-11V9c0-.2-.1-.4-.3-.5h-.2c-.1 0-.3.1-.4.2l-2.7 3c0 .2 0 .4.1.6z"
            />
          </svg>
        </a>
      </li>
      <li
        class="nhsuk-pagination-item nhsuk-pagination-item--next"
      >
        <a
          class="nhsuk-pagination__link nhsuk-pagination__link--next"
          data-testid="pagination-link-next"
          href="/#next"
        >
          <span
            class="nhsuk-pagination__title"
          >
            Next
          </span>
          <span
            class="nhsuk-u-visually-hidden"
          >
            :
          </span>
          <span
            class="nhsuk-pagination__page"
          >
            Page 3
          </span>
          <svg
            aria-hidden="true"
            class="nhsuk-icon nhsuk-icon__arrow-right"
            height="34"
            viewBox="0 0 24 24"
            width="34"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M19.6 11.66l-2.73-3A.51.51 0 0 0 16 9v2H5a1 1 0 0 0 0 2h11v2a.5.5 0 0 0 .32.46.39.39 0 0 0 .18 0 .52.52 0 0 0 .37-.16l2.73-3a.5.5 0 0 0 0-.64z"
            />
          </svg>
        </a>
      </li>
    </ul>
  </nav>,
]
`;

exports[`Pagination > should match the snapshot 1`] = `
[
  <nav
    class="nhsuk-pagination"
    data-testid="pagination"
  >
    <ul
      class="nhsuk-list nhsuk-pagination__list"
    >
      <li
        class="nhsuk-pagination-item nhsuk-pagination-item--previous"
      >
        <a
          class="nhsuk-pagination__link nhsuk-pagination__link--prev"
          href="#previous"
        >
          <span
            class="nhsuk-pagination__title"
          >
            Previous
          </span>
          <span
            class="nhsuk-u-visually-hidden"
          >
            :
          </span>
          <span
            class="nhsuk-pagination__page"
          >
            Page 1
          </span>
          <svg
            aria-hidden="true"
            class="nhsuk-icon nhsuk-icon__arrow-left"
            height="34"
            viewBox="0 0 24 24"
            width="34"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M4.1 12.3l2.7 3c.2.2.5.2.7 0 .1-.1.1-.2.1-.3v-2h11c.6 0 1-.4 1-1s-.4-1-1-1h-11V9c0-.2-.1-.4-.3-.5h-.2c-.1 0-.3.1-.4.2l-2.7 3c0 .2 0 .4.1.6z"
            />
          </svg>
        </a>
      </li>
      <li
        class="nhsuk-pagination-item nhsuk-pagination-item--next"
      >
        <a
          class="nhsuk-pagination__link nhsuk-pagination__link--next"
          href="#next"
        >
          <span
            class="nhsuk-pagination__title"
          >
            Next
          </span>
          <span
            class="nhsuk-u-visually-hidden"
          >
            :
          </span>
          <span
            class="nhsuk-pagination__page"
          >
            Page 3
          </span>
          <svg
            aria-hidden="true"
            class="nhsuk-icon nhsuk-icon__arrow-right"
            height="34"
            viewBox="0 0 24 24"
            width="34"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M19.6 11.66l-2.73-3A.51.51 0 0 0 16 9v2H5a1 1 0 0 0 0 2h11v2a.5.5 0 0 0 .32.46.39.39 0 0 0 .18 0 .52.52 0 0 0 .37-.16l2.73-3a.5.5 0 0 0 0-.64z"
            />
          </svg>
        </a>
      </li>
    </ul>
  </nav>,
]
`;
